force-app/main/default/objects/Opportunity/fields/Add_to_Followup__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Followup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked on Opp, Marketing Team knows to add Primary Contact from Opp to FU Communication.</description>
    <inlineHelpText>If checked on Opp, Marketing Team knows to add Primary Contact from Opp to FU Communication.</inlineHelpText>
    <label>zMarketing - Nurture</label>
    <type>Checkbox</type>
</CustomField>