force-app/main/default/objects/Opportunity/fields/Additional_Client_CC__c.field-meta.xml
<CustomField>
    <fullName>Additional_Client_CC__c</fullName>
    <description>Comma separated list of additional emails that the client would like to have CC&apos;d on emails. 
Used in Workato flows when sending invoice. Defaults to value from the account field, however, is customisable. If you need to add additional accounting emails to all future opps, add these to the account field and they will populate into all future opps. Adding them to this opp level field will only update this specific opp.</description>
    <inlineHelpText>Comma separated list of additional emails that the client would like to have CC&apos;d on emails. 
Used in Workato flows when sending invoice. Defaults to value from the account field, however, is customisable. If you need to add additional accounting emails to all future opps, add these to the account field and they will populate into all future opps. Adding them to this opp level field will only update this specific opp.</inlineHelpText>
    <label>A/R - Billing Contact(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>