force-app/main/default/objects/Opportunity/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Copy &amp; Paste Initial Client Inquiry Email into this field. 
Required Field upon Opp Creation in Gmail Integration
Have considered automating this w Einstein Gmail integration into Activity section, however, initial email would become buried at bottom of activity chain unless we determined best practice for &apos;pinning&apos; initial email to top. 
Starting 12/2022, Typeform now auto-populates field based on Typeform responses</description>
    <inlineHelpText>Copy &amp; Paste Initial Client Inquiry Email into this field. 
Required Field upon Opp Creation in Gmail Integration
Have considered automating this w Einstein Gmail integration into Activity section, however, initial email would become buried at bottom of activity chain unless we determined best practice for &apos;pinning&apos; initial email to top. 
Starting 12/2022, Typeform now auto-populates field based on Typeform responses</inlineHelpText>
    <label>Initial Inquiry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>