force-app/main/default/objects/Opportunity/fields/Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Amt Outstanding on Invoice and informs whether Customer has paid Invoice and which amount remains outstanding.
Populated by Middleware software, Workato, via recipe w. QB which looks up Invoice Amt Outstanding in QB and populates this field automatically in SF</description>
    <inlineHelpText>Amt Outstanding on Invoice and informs whether Customer has paid Invoice and which amount remains outstanding.
Populated by Middleware software, Workato, via recipe w. QB which looks up Invoice Amt Outstanding in QB and populates this field automatically in SF</inlineHelpText>
    <label>zAmount - Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>