force-app/main/default/objects/Opportunity/fields/Amount_QB__c.field-meta.xml
<CustomField>
    <fullName>Amount_QB__c</fullName>
    <description>Purpose: This field calculates the total invoice amount from QuickBooks.
Calculation: Derived by adding the Primary Quote Amount and the Sales Tax from the related opportunity.
Data Source: Auto-pulled from the primary opportunity quote when the Estimate Status is set to Invoice Sent.
Formula: Amount + Tax_to_collect__c
Usage: Used to track the invoice amount for reporting, reconciliation, and syncing data with QuickBooks.</description>
    <formula>Amount +  Tax_to_collect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount (QB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>