force-app/main/default/objects/Opportunity/fields/Amount_Total_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Amount_Total_Amount_Invoiced__c</fullName>
    <formula>If(CloseDate &gt;= DATE(2023,5,1), Amount_QB__c -  breadwinner_qbo__Total_Amount_Invoiced__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amt - Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>