force-app/main/default/objects/Opportunity/fields/Angles_Required__c.field-meta.xml
<CustomField>
    <fullName>Angles_Required__c</fullName>
    <description>Informs # of Angles Per Sku
# of Angles Per Sku varies depending on Product Type within Single Opp</description>
    <inlineHelpText>Informs # of Angles Per Sku
# of Angles Per Sku varies depending on Product Type within Single Opp</inlineHelpText>
    <label>zMisc - eCom - Angles Per Sku</label>
    <length>200</length>
    <type>Text</type>
</CustomField>