force-app/main/default/objects/Opportunity/fields/Before_After_Link__c.field-meta.xml
<CustomField>
    <fullName>Before_After_Link__c</fullName>
    <label>zTypeform - Before &amp; After</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>