force-app/main/default/objects/Opportunity/fields/Bill_Full_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_Full_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For small projects, bill Client Full Amount as opposed to billing 50% Deposit/Balance. 
If we are billing client full amount, check this checkbox. 
Integrates w. Pandadoc Estimate/Invoice creation and populates Payment Amount fields accordingly.</description>
    <inlineHelpText>For small projects, bill Client Full Amount as opposed to billing 50% Deposit/Balance. 
If we are billing client full amount, check this checkbox. 
Integrates w. Pandadoc Estimate/Invoice creation and populates Payment Amount fields accordingly.</inlineHelpText>
    <label>Amount - Bill In Full</label>
    <type>Checkbox</type>
</CustomField>