force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Integration w. Typeform Form Fields.</description>
    <inlineHelpText>Integration w. Typeform Form Fields.</inlineHelpText>
    <label>zTypeform - Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000-$10,000</fullName>
            </value>
            <value>
                <fullName>$10,000-$25,000</fullName>
            </value>
            <value>
                <fullName>$25,000-$50,000</fullName>
            </value>
            <value>
                <fullName>$50,000+</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>