force-app/main/default/objects/Opportunity/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Updates field to renewal business if at least one opp  already exists on same account.
Determines whether marketing efforts are paying off as marketing goal is to build more new clients than return clients. 
Determines client retention and % of business which is New v. Return Clients</description>
    <inlineHelpText>Updates field to renewal business if at least one opp  already exists on same account.
Determines whether marketing efforts are paying off as marketing goal is to build more new clients than return clients. 
Determines client retention and % of business which is New v. Return Clients</inlineHelpText>
    <label>New v. Return Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Business</fullName>
                <default>true</default>
                <label>Return Client</label>
            </value>
            <value>
                <fullName>New Business</fullName>
                <label>New Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>