force-app/main/default/objects/Opportunity/fields/CC_Fee_Estimate__c.field-meta.xml
<CustomField>
    <fullName>CC_Fee_Estimate__c</fullName>
    <formula>IF ( Bill_Full_Amount__c = TRUE,(Amount + Tax_to_collect__c )  * 0.0298676 + 0.30 + 0.004, ((Amount + Tax_to_collect__c ) / 2)  * 0.0298676 + 0.30 + 0.004)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Fee - Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>