force-app/main/default/objects/Opportunity/fields/CC_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>CC_Fee_Total__c</fullName>
    <description>This calculates the Stripe Processing Fee which we are responsible for paying for on our side.
For Credit Card Payments, this equals 4% CC Processing Fee + .30 cents per transaction
For ACH/Direct Deposits, this equals $5 per transaction
This was built to inform Quickbooks of any Stripe Fee variance in final received client payments which negated the ability of the &apos;Match Transaction&apos; in Quickbooks Transactions Module</description>
    <formula>IF(  CC_Payment__c = TRUE, ((Amount + Tax_to_collect__c )  * 0.0298676 + 0.30 + 0.004), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates the Stripe Processing Fee which we are responsible for paying for on our side.
For Credit Card Payments, this equals 4% CC Processing Fee + .30 cents per transaction
For ACH/Direct Deposits, this equals $5 per transaction
This was built to inform Quickbooks of any Stripe Fee variance in final received client payments which negated the ability of the &apos;Match Transaction&apos; in Quickbooks Transactions Module</inlineHelpText>
    <label>CC Fee - Stripe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>