force-app/main/default/objects/Opportunity/fields/CC_Payment__c.field-meta.xml
<CustomField>
    <fullName>CC_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Client is paying w. CC</description>
    <label>CC Payment</label>
    <type>Checkbox</type>
</CustomField>