force-app/main/default/objects/Opportunity/fields/Check_Me__c.field-meta.xml
<CustomField>
    <fullName>Check_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers automations via data-loader when edit to record is needed. 
Feld is not available on page layouts or reports.</description>
    <label>zMisc - Check Me</label>
    <type>Checkbox</type>
</CustomField>