force-app/main/default/objects/Opportunity/fields/Close_Month_CUSTOM__c.field-meta.xml
<CustomField>
    <fullName>Close_Month_CUSTOM__c</fullName>
    <description>Used Internally for Reports only
Not on page views</description>
    <formula>CASE(MONTH( CloseDate  ),
1, &quot;1. JANUARY&quot;,
2, &quot;2. FEBRUARY&quot;,
3, &quot;3. MARCH&quot;,
4, &quot;4. APRIL&quot;,
5, &quot;5. MAY&quot;,
6, &quot;6. JUNE&quot;,
7, &quot;7. JULY&quot;,
8, &quot;8. AUGUST&quot;,
9, &quot;9. SEPTEMBER&quot;,
10, &quot;91. OCTOBER&quot;,
11, &quot;92. NOVEMBER&quot;,
12, &quot;93. DECEMBER&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used Internally for Reports only
Not on page views</inlineHelpText>
    <label>zPandadoc - Close Date - Month - Text</label>
    <type>Text</type>
</CustomField>