force-app/main/default/objects/Opportunity/fields/Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance__c</fullName>
    <formula>Project_Total__c * 0.03</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zMisc - Coinsurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>