force-app/main/default/objects/Opportunity/fields/Company_Role__c.field-meta.xml
<CustomField>
    <fullName>Company_Role__c</fullName>
    <label>zCompany Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>