force-app/main/default/objects/Opportunity/fields/Confirmed_Shoot_10_Days_Out__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Shoot_10_Days_Out__c</fullName>
    <formula>Shoot_Date__c = Today()+10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zShoot Date - Misc - Adds 10 Day</label>
    <type>Checkbox</type>
</CustomField>