force-app/main/default/objects/Opportunity/fields/Continuous__c.field-meta.xml
<CustomField>
    <fullName>Continuous__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If no gap in shoot dates, check Continuous
If gaps in shoot dates, uncheck Continuous</inlineHelpText>
    <label>Shoot Date - Continuous Dates</label>
    <type>Checkbox</type>
</CustomField>