force-app/main/default/objects/Opportunity/fields/Counts_Towards_Retainer_Balance__c.field-meta.xml
<CustomField>
    <fullName>Counts_Towards_Retainer_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enter whether opp counts towards Remaining Retainer Balance in Sub-Account Retainer (Related to Season). 
If unchecked, Opp will not count towards retainer and will, therefore, not appear on any Retainer Level Reporting</description>
    <inlineHelpText>Enter whether opp counts towards Remaining Retainer Balance in Sub-Account Retainer (Related to Season). 
If unchecked, Opp will not count towards retainer and will, therefore, not appear on any Retainer Level Reporting</inlineHelpText>
    <label>zRetainer - Count Towards Balance</label>
    <type>Checkbox</type>
</CustomField>