force-app/main/default/objects/Opportunity/fields/CurrentQuoteID__c.field-meta.xml
<CustomField>
    <fullName>CurrentQuoteID__c</fullName>
    <label>CurrentQuoteID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>