force-app/main/default/objects/Opportunity/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Total # of Shoot Days for Opp
Used by Calendar to Lookup Opp Start Date and auto calculate Opp End Date</description>
    <inlineHelpText>Total # of Shoot Days for Opp
Used by Calendar to Lookup Opp Start Date and auto calculate Opp End Date</inlineHelpText>
    <label>Shoot Date - # Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>