force-app/main/default/objects/Opportunity/fields/deal_value__c.field-meta.xml
<CustomField>
    <fullName>deal_value__c</fullName>
    <label>Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>