force-app/main/default/objects/Opportunity/fields/Decision_Maker_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zDecision Maker Assigned</label>
    <type>Checkbox</type>
</CustomField>