force-app/main/default/objects/Opportunity/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <formula>IF ( CC_Payment__c = TRUE, (Amount / 2) +  CC_Fee_Estimate__c  +  Tax_to_collect__c , (Amount /2) + Tax_to_collect__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>