force-app/main/default/objects/Opportunity/fields/Deposit_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Paid__c</fullName>
    <description>Entered when Client has remitted payment for 50% Deposit.
Auto Generated via &apos;Amount Outstanding&apos; field which displays Total Invoice Amount - Payments, which calculates deposit payment amount</description>
    <inlineHelpText>Entered when Client has remitted payment for 50% Deposit.
Auto Generated via &apos;Amount Outstanding&apos; field which displays Total Invoice Amount - Payments, which calculates deposit payment amount</inlineHelpText>
    <label>zDeposit - Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>