force-app/main/default/objects/Opportunity/fields/Dialpad__Powerdialer_Dialed_List__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Powerdialer_Dialed_List__c</fullName>
    <label>Powerdialer Dialed List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>