force-app/main/default/objects/Opportunity/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <inlineHelpText>The name of the Division for which this Opportunity was created</inlineHelpText>
    <label>Division Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>