force-app/main/default/objects/Opportunity/fields/Due_Date_Client_Selects__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Client_Selects__c</fullName>
    <label>zDue Date - Client Selects</label>
    <type>Date</type>
</CustomField>