force-app/main/default/objects/Opportunity/fields/Due_Date_R1_Retouching__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_R1_Retouching__c</fullName>
    <label>zDue Date - Final - To Client</label>
    <type>Date</type>
</CustomField>