force-app/main/default/objects/Opportunity/fields/Due_Date_Retouching_R1__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Retouching_R1__c</fullName>
    <label>zDue, R1&gt;Client</label>
    <type>Date</type>
</CustomField>