force-app/main/default/objects/Opportunity/fields/Due_Date_Retouching_R1_Internal__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Retouching_R1_Internal__c</fullName>
    <label>zDue Date - R1 - Internal</label>
    <type>Date</type>
</CustomField>