force-app/main/default/objects/Opportunity/fields/Due_Date_Retouching_R2_Markups__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Retouching_R2_Markups__c</fullName>
    <label>zDue Date - R1 - Markups</label>
    <type>Date</type>
</CustomField>