force-app/main/default/objects/Opportunity/fields/Due_Date_Retouching_R3_Markups__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Retouching_R3_Markups__c</fullName>
    <label>zDue Date - R3 - Markups</label>
    <type>DateTime</type>
</CustomField>