force-app/main/default/objects/Opportunity/fields/Due_Date_Retouching_R3_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Retouching_R3_To_Client__c</fullName>
    <label>zDue Date - R3 - To Client</label>
    <type>DateTime</type>
</CustomField>