force-app/main/default/objects/Opportunity/fields/Due_Date_Send_for_Clipping__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Send_for_Clipping__c</fullName>
    <label>zDue Date - Clipping</label>
    <type>Date</type>
</CustomField>