force-app/main/default/objects/Opportunity/fields/Due_Date_Send_to_Retoucher__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Send_to_Retoucher__c</fullName>
    <label>zDue Date - To Retoucher</label>
    <type>Date</type>
</CustomField>