force-app/main/default/objects/Opportunity/fields/Early_Exit__c.field-meta.xml
<CustomField>
    <fullName>Early_Exit__c</fullName>
    <label>zMisc - Early Exit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>