force-app/main/default/objects/Opportunity/fields/easymargin__Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>easymargin__Total_Margin__c</fullName>
    <inlineHelpText>Deprecated
Not Used and should be deleted</inlineHelpText>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>