force-app/main/default/objects/Opportunity/fields/Enroll_in_Overdue_Auto_Payment__c.field-meta.xml
<CustomField>
    <fullName>Enroll_in_Overdue_Auto_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox enrolls this specific OPPORTUNITY in the over due auto-payments flow.</description>
    <inlineHelpText>This checkbox enrolls this specific OPPORTUNITY in the over due auto-payments flow. 
Only check box if you want client to be auto-charged if their invoice is overdue and 30 days past the grace period.</inlineHelpText>
    <label>zA/R - Enroll in Overdue Auto-Payment</label>
    <type>Checkbox</type>
</CustomField>