force-app/main/default/objects/Opportunity/fields/EQCost__c.field-meta.xml
<CustomField>
    <fullName>EQCost__c</fullName>
    <description>Pulls data from Eq Order in Booqable, our Eq List Software</description>
    <inlineHelpText>Pulls data from Eq Order in Booqable, our Eq List Software</inlineHelpText>
    <label>zEquipment - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>