force-app/main/default/objects/Opportunity/fields/Estimate_Status__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Status__c</fullName>
    <description>Populated Automatically based on Pandadoc Estimate/Invoice statuses.
If Estimate Status = Invoice Sent, Invoice is automatically created in QB to reflect current Primary Quote</description>
    <label>zPD, Est, Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Paid</fullName>
                <label>.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>