force-app/main/default/objects/Opportunity/fields/Expendables_Price__c.field-meta.xml
<CustomField>
    <fullName>Expendables_Price__c</fullName>
    <label>zEquipment - Amount - Expendables</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>