force-app/main/default/objects/Opportunity/fields/First_Hold_1__c.field-meta.xml
<CustomField>
    <fullName>First_Hold_1__c</fullName>
    <description>Located in Gmail Integration for Opp Creation.
Eenter 1st Option Start Dates here.
Integrates w Shoot Holds Calendar. 
Warning to inform of conflicting Holds in calendar to reduce error.</description>
    <inlineHelpText>Located in Gmail Integration for Opp Creation.
Eenter 1st Option Start Dates here.
Integrates w Shoot Holds Calendar. 
Warning to inform of conflicting Holds in calendar to reduce error.</inlineHelpText>
    <label>Shoot Date - 1st - Start</label>
    <type>Date</type>
</CustomField>