force-app/main/default/objects/Opportunity/fields/First_Hold_2__c.field-meta.xml
<CustomField>
    <fullName>First_Hold_2__c</fullName>
    <description>In Gmail Integration for Opp Creation.
Enter 1st Option End Dates here.
Integrates w Shoot Holds Calendar. 
Warning to inform of conflicting Holds in the calendar to reduce error.</description>
    <inlineHelpText>In Gmail Integration for Opp Creation.
Enter 1st Option End Dates here.
Integrates w Shoot Holds Calendar. 
Warning to inform of conflicting Holds in the calendar to reduce error.</inlineHelpText>
    <label>Shoot Date - 1st - End</label>
    <type>Date</type>
</CustomField>