force-app/main/default/objects/Opportunity/fields/First_Hold_Calendar__c.field-meta.xml
<CustomField>
    <fullName>First_Hold_Calendar__c</fullName>
    <label>Shoot Date - 1st</label>
    <length>100</length>
    <type>Text</type>
</CustomField>