force-app/main/default/objects/Opportunity/fields/FirstHold1DT__c.field-meta.xml
<CustomField>
    <fullName>FirstHold1DT__c</fullName>
    <description>Not On Page View</description>
    <formula>DATETIMEVALUE(  First_Hold_1__c  ) + 1020/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zShoot Date - 1st - Start</label>
    <type>DateTime</type>
</CustomField>