force-app/main/default/objects/Opportunity/fields/FirstHold2DT__c.field-meta.xml
<CustomField>
    <fullName>FirstHold2DT__c</fullName>
    <description>Runs BTS and not located in Page View
Integrates w Shoot Holds Calendar.</description>
    <formula>DATETIMEVALUE(  First_Hold_2__c  ) + 1020/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Runs BTS and not located in Page View
Integrates w Shoot Holds Calendar.</inlineHelpText>
    <label>zShoot Date - 1st - End</label>
    <type>DateTime</type>
</CustomField>