force-app/main/default/objects/Opportunity/fields/Google_Review_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Google_Review_Request_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked on Opp, Marketing Team has already sent Request to Primary Contact on Opp to provide Google Review</description>
    <inlineHelpText>If checked on Opp, Marketing Team has already sent Request to Primary Contact on Opp to provide Google Review</inlineHelpText>
    <label>zMarketing - Google Review - Requested</label>
    <type>Checkbox</type>
</CustomField>