force-app/main/default/objects/Opportunity/fields/Google_Review_To_Request__c.field-meta.xml
<CustomField>
    <fullName>Google_Review_To_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked on opp, Marketing Team should send a Request to Primary Contact on Opp to provide Google Review</description>
    <inlineHelpText>If checked on opp, Marketing Team should send a Request to Primary Contact on Opp to provide Google Review</inlineHelpText>
    <label>zMarketing - Google Review - To Request</label>
    <type>Checkbox</type>
</CustomField>