force-app/main/default/objects/Opportunity/fields/Hold1DT__c.field-meta.xml
<CustomField>
    <fullName>Hold1DT__c</fullName>
    <description>Runs BTS + not located in Page View
Integrates w Shoot Holds Calendar</description>
    <formula>DATETIMEVALUE( Shoot_Hold_1__c ) + 1020/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Runs BTS + not located in Page View
Integrates w Shoot Holds Calendar</inlineHelpText>
    <label>zShoot Date - 1st - Start</label>
    <type>DateTime</type>
</CustomField>