force-app/main/default/objects/Opportunity/fields/Image_Count__c.field-meta.xml
<CustomField>
    <fullName>Image_Count__c</fullName>
    <description>Total Image Count for the Opp
Used in Account Level reporting + good standard of Opp &apos;Size&apos;
Price Per Image Calculation is based on Image Count entered into this Field</description>
    <label>Image Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>