force-app/main/default/objects/Opportunity/fields/Images_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Images_Monthly__c</fullName>
    <label>zTypeform - Image Month</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>